# cadcam

./: .clang-format  .gitignore  CMakeLists.txt  object.step  points.cpp
gui/: CMakeLists.txt
gui/shaders/: cube_f.glsl  cube_v.glsl  shaders.qrc
gui/src/: main.cpp  openglwindow.cpp  openglwindow.h
gui/src/objects/: bezier.cpp  bezier.h  object.cpp  object.h  point.h  torus.cpp  torus.h
models/: box_sphere.step  point_cloud.stp
src/: ICP.cpp  ICP.h  cxxopts.h  main.cpp  mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h  pcgen.cpp  points.cpp
